--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -65,7 +65,8 @@ B.~Tomelleri(\protect\footnotemark[1] )}
 %componente. Discutiamo la presenza di una componente resistiva del diodo e ne
 %misuriamo l'entità, al fine di arrivare ad un modello teorico in grado
 %giustificare eventuali deviazioni dal modello di Shockley, verso una risposta
-%-ohmica- dovuta alla resistenza della giunzione PN al passaggio di correnti.\\\\
+%-ohmica- dovuta alla resistenza della giunzione PN al passaggio di 
+correnti.\\\\
 %PACS 01.40.-d – Education.\\
 %PACS 01.50.Pa – Laboratory experiments and apparatus.
 %\end{mdframed}
@@ -99,13 +100,15 @@ attraversa tali elementi sia la medesima:
 Dunque la relazione che lega la corrente e la tensione ai capi del diodo può 
 essere espressa secondo la legge:
 \begin{equation}\label{eq: model}
-	\Delta V = \Delta V_{\text{diodo}} + \Delta V_{\text{resistore}} = \eta V_T \ln{\left(\frac{
+	\Delta V = \Delta V_{\text{diodo}} + \Delta V_{\text{resistore}} = \eta 
+V_T \ln{\left(\frac{
 	I+I_0}{I_0}\right)} + RI
 \end{equation}
 \begin{figure}[H]
 	\centering 
  		\includegraphics[scale=0.25]{./confronto_curve.png}
- 	\caption{confronto degli andamenti: la curva si Shokley (in rosso) e la legge \eqref{eq: model} (in viola)}
+ 	\caption{confronto degli andamenti: la curva si Shokley (in rosso) e la 
+legge \eqref{eq: model} (in viola)}
 \end{figure}
 
 
@@ -130,9 +133,12 @@ temperatura del semiconduttore inferiore a 0.5 K).
 \subsection{Apparato}
 L'apparato sperimentale è costituito da un circuito, realizzato su basetta 
 sperimentale, il cui scopo è generare correnti impulsate attraverso il diodo 
-$D1$ e la resistenza $R1$. La misura della differenza di potenziale ai capi di quest'ultima
-permette la stima della corrente che attraversa il diodo. Ai fini di esplorare ampie zone 
-di lavoro del diodo, la resistenza è stata cambiata opportunamente scegliendo tra le seguenti:
+$D1$ e la resistenza $R1$. La misura della differenza di potenziale ai capi di 
+quest'ultima
+permette la stima della corrente che attraversa il diodo. Ai fini di esplorare 
+ampie zone 
+di lavoro del diodo, la resistenza è stata cambiata opportunamente scegliendo 
+tra le seguenti:
 \begin{table}[H]
     \begin{center}
 	\begin{tabular}{lll}
@@ -150,23 +156,29 @@ di lavoro del diodo, la resistenza è stata cambiata opportunamente scegliendo t
 	    \bottomrule
 	\end{tabular}
 	\caption{I valori delle resistenze poste in serie al diodo, riportate in
-		valore nominale e misurate con multimetri digitali. \label{tab: res}}
+		valore nominale e misurate con multimetri digitali. \label{tab: 
+res}}
     \end{center}
 \end{table}
 Nel circuito può essere individuata una parte che si occupa della carica e 
-scarica controllata del condensatore $C1$, il cui scopo è quello di fornire una 
+scarica controllata del condensatore $C1$, il cui scopo è quello di fornire 
+una 
 tensione che possa essere facilmente regolata e sufficientemente stabile 
 durante un impulso. Un'altra parte del circuito si occupa di collegare a 
 comando il condensatore alla serie $R1-D1$ attraverso un MOS-FET.\\
 Il circuito è alimentato da 2 tensioni fornite da un alimentatore stabilizzato 
 switching e da un Buck Boost Converter. Un segnale fornito su $T2$ provoca la 
-carica del condensatore mentre su $T3$ la sua scarica. Un segnale (invertito) su 
+carica del condensatore mentre su $T3$ la sua scarica. Un segnale (invertito) 
+su 
 $T1$ innesca l'impulso di corrente sul diodo.\\
-La tensione di C$1$ è misurata attraverso un partitore di tensione collegato ad 
-\verb+OUT3+ ed alla scheda di controllo, mentre la tensione ai punti \verb+OUT1+ e
+La tensione di C$1$ è misurata attraverso un partitore di tensione collegato 
+ad 
+\verb+OUT3+ ed alla scheda di controllo, mentre la tensione ai punti 
+\verb+OUT1+ e
 \verb+OUT2+ è letta direttamente.\\
 Come MCU per la gestione dell'apparato è stata scelta la scheda 
-\verb+Teensy 3.2+\cite{teensy}. Questa si occupa del controllo dei segnali e delle letture 
+\verb+Teensy 3.2+\cite{teensy}. Questa si occupa del controllo dei segnali e 
+delle letture 
 analogiche. In particolare \verb+Teensy+  permette la lettura analogica 
 sincronizzata differenziale veloce, essendo dotato di due ADC, entrambi con una 
 risoluzione reale di 12 bit. La lettura differenziale è fondamentale per 
@@ -181,36 +193,63 @@ resistenza.
 \begin{figure}[H]
 	\centering 
  		\includegraphics[scale=0.5]{./measure.png}
- 	\caption{Schema circuitale del sistema di lettura (verso \texttt{Teensy})
+ 	\caption{Schema circuitale del sistema di lettura (verso 
+\texttt{Teensy})
 	\label{sch:rdng}}
 \end{figure}
 
 %================================
 %         Calibrazione
 %================================
-\subsection{Calibrazione}
+\subsection{Calibrazione}\label{sec: cal}
 
-La calibrazione dei canali ADC0 e ADC1 è stata effettuata sulla base della lettura differenziale rispettivamente fra i pin A10 e A11 e fra A12 e A13. E’ stata calibrata la lettura di ciascuna delle due coppie separatamente.
+La calibrazione dei canali \verb+ADC0+ e \verb+ADC1+ è stata effettuata
+sulla base della lettura differenziale rispettivamente fra i pin \verb+A10+
+e \verb+A11+ e fra \verb+A12+ e \verb+A13+. E’ stata calibrata la lettura
+di ciascuna delle due coppie separatamente.
 
-I pin volti alla lettura della tensione maggiore sono stati collegati al centrale di un potenziometro, a sua volta collegato ad un generatore di potenziale con tensione in ingresso pari a 3.3. V. Gli altri due pin sono stati invece collegati a massa.
+I pin volti alla lettura della tensione maggiore sono stati collegati al 
+centrale di un potenziometro, a sua volta collegato ad un generatore di 
+potenziale con tensione in ingresso pari a 3.3V . Gli altri due pin sono stati 
+invece collegati a massa.
 
-Variando la resistenza e conseguentemente la differenza di potenziale in ingresso, è stato possibile calcolare la media, la deviazione standard campione e la deviazione standard dalla media relative a ciascuna tensione per un gruppo di 10000 misure effettuate con Teensy (vedi \href{https://github.com/LucaCiucci/relaz_seme/blob/master/sketches/teensy_calib/teensy_calib.ino}{relativo programma}). Il centrale del potenziometro e la massa sono state, inoltre, collegate ad un multimetro digitale, così da avere il rispettivo valore in volt per ciascuna tensione valutata in unità arbitrarie. Sono stati, quindi, associati degli errori a queste ultime misure  tenendo presente le specifiche del multimetro.
+Variando la resistenza e conseguentemente la differenza di potenziale in 
+ingresso, è stato possibile calcolare la media, la deviazione standard 
+campione e la deviazione standard dalla media relative a ciascuna tensione per 
+un gruppo di 10000 misure effettuate con Teensy (vedi 
+\href{https://github.com/LucaCiucci/relaz_seme/blob/master/sketches/teensy_calib
+/teensy_calib.ino}{relativo programma}). Il centrale del potenziometro e la 
+massa sono state, inoltre, collegate ad un multimetro digitale, così da avere 
+il rispettivo valore in volt per ciascuna tensione valutata in unità 
+arbitrarie. Sono stati, quindi, associati degli errori a queste ultime misure  
+tenendo presente le specifiche del multimetro.
 
-Dopodichè le misure relative a ciascuna coppia di boccole sono state poste all’interno di un grafico con i dati raccolti da Teensy in ordinate e i valori misurati col multimetro in ascisse. Dunque è stato effettuato un fit lineare attraverso la legge:
+Dopodiché le misure relative a ciascuna coppia di boccole sono state poste 
+all’interno di un grafico con i dati raccolti da Teensy in ordinate e i 
+valori misurati col multimetro in ascisse. Dunque è stato effettuato un fit 
+lineare attraverso la legge:
 
 \begin{equation}
 y(x, m, q)  = m \cdot x + q
 \end{equation}
 
-ove a e b sono i parametri liberi. Come errori associati alle letture digitali sono state utilizzate le deviazioni standard dalla media. I fit relativi ad ADC0 ed ADC1 hanno conseguito i seguenti risultati:
+ove a e b sono i parametri liberi. Come errori associati alle letture digitali 
+sono state utilizzate le deviazioni standard dalla media. I fit relativi ad 
+\verb+ADC0+ ed \verb+ADC1+ hanno conseguito i seguenti risultati:
 \begin{align*}
-	&ADC0	&&ADC1\\
-	m_0 &= 0.7968 \pm  0.0033   \; mV/digit	& m_1 &= 0.7954 \pm 0.0026  \; mV/digit \\
-	q_0 &= - 0.18 \pm 0.34  \; mV 	&q_1 &= 3.84  \pm 0.26  \; mV \\
-	Var(m_0)  &= 1.1 \cdot 10^{-11}  \; V^2 /digit^2	&Var(m_1) &= 7.0 \cdot 10^{-12}  \; V^2 /digit^2 \\
-	Var(q_0) &=1.2 \cdot 10^{-7} \; V^2 	&Var(q_1) &= 6.8 \cdot 10^{-8} \; V^2 \\
-	Cov(m_0, q_0) &= - 1.6 \cdot 10^{-10} \; V^2  /digit	&Cov(m_1, q_1) &= - 6.1 \cdot 10^{-11} \; V^2  /digit \\
-	{\chi}^2/\text{ ndof} &= {145 }/{15}	&{\chi}^2/\text{ ndof} &= {96}/{15}\\ 
+	&\qquad \texttt{ADC0}	&&\qquad  \texttt{ADC1} \\
+	m_0 &= 0.7968 \pm  0.0033  \; \mathrm{mV/digit} 
+	& m_1  &= 0.7954 \pm 0.0026  \; \mathrm{mV/digit} \\
+	q_0 &= - 0.18 \pm 0.34  \; \mathrm{mV} 	
+	&q_1 &= 3.84  \pm 0.26  \; \mathrm{mV} \\
+	\var{m_0}  &= 1.1 \cdot 10^{-11}  \; \mathrm{V}^2 /\mathrm{digit}^2
+	&\var{m_1} &= 7.0 \cdot 10^{-12}  \; \mathrm{V}^2 /\mathrm{digit}^2 \\
+	\var{q_0} &=1.2 \cdot 10^{-7} \; \mathrm{V}^2
+	&\var{q_1} &= 6.8 \cdot 10^{-8} \; \mathrm{V}^2 \\
+	\cov{m_0} {q_0} &= - 1.6 \cdot 10^{-10} \; \mathrm{V}^2 /\mathrm{digit}
+        &\cov{m_1}{q_1} &= - 6.1 \cdot 10^{-11} \;
+	\mathrm{V}^2 /\mathrm{digit} \\
+	\chi^2/\text{ndof} &= 145/15	&\chi^2/\text{ndof} &= 96/15 \\ 
 	\text{abs\_sigma} &= \rm False	&\text{abs\_sigma} &= \rm False
 \end{align*}
 
@@ -228,15 +267,27 @@ ove a e b sono i parametri liberi. Come errori associati alle letture digitali s
 \end{subfigure}
 \end{figure}
 
-I coefficienti così riscontrati ci permetteranno di fornire una buona stima dei valori centrali relativi alla misura in volt delle letture analogiche (digit). Il $\chi^2$ risulta essere sovrastimato in quanto il MCU non ci fornisce una risposta perfettamente lineare ai segnali in ingresso. Dalle specifiche di Teensy 3.2, sappiamo che lo scostamento dall’andamento lineare può essere quantificato col 7 $\%$ della lettura in digit.\newline
-Per maggiori informazioni riguardo alle stime delle incertezze nelle conversioni si rimanda direttamente al \href{https://github.com/LucaCiucci/relaz_seme/blob/master/Cartella_fit/funzioni.py}{relativo script}.
+I coefficienti così riscontrati ci permetteranno di fornire una buona stima 
+dei valori centrali relativi alla misura in volt delle letture analogiche 
+(digit). Il $\chi^2$ risulta essere sovrastimato in quanto il MCU non ci 
+fornisce una risposta perfettamente lineare ai segnali in ingresso. Dalle 
+specifiche di \verb+Teensy 3.2+, sappiamo che lo scostamento dall’andamento lineare 
+può essere quantificato col 7 $\%$ della lettura in digit.\newline
+Per maggiori informazioni riguardo alle stime delle incertezze nelle 
+conversioni si rimanda direttamente al 
+\href{https://github.com/LucaCiucci/relaz_seme/blob/master/Cartella_fit/funzioni
+.py}{relativo script}.
 
 %================================
 %       Acquisizione dati
 %================================
 \subsection{Acquisizione dati}
-Per ciascun valore scelto della resistenza $R1$ è stata eseguita una presa dati 
-automatizzata secondo una \href{https://github.com/LucaCiucci/relaz_seme/blob/master/sketches/teensy_differenziale_definitivo/teensy_differenziale_definitivo.ino}{routine} programmata in \verb+Teensy+: il condensatore 
+Per ciascun valore scelto della resistenza $R1$ è stata eseguita una presa 
+dati 
+automatizzata secondo una 
+\href{https://github.com/LucaCiucci/relaz_seme/blob/master/sketches/teensy_diffe
+renziale_definitivo/teensy_differenziale_definitivo.ino}{routine} programmata 
+in \verb+Teensy+: il condensatore 
 viene caricato ad una tensione prefissata; una volta raggiunto il valore 
 prestabilito viene inviato il segnale su $T1$, si avvia l'acquisizione 
 sincronizzata e si attende un tempo 50 $\mu$s per permettere al MOS-FET di 
@@ -245,7 +296,8 @@ ritardo tra segnale e impulso) e scartare eventuali segnali spuri; a questo
 punto si inizia a memorizzare una serie da 100 coppie di letture 
 -sincronizzate- (a meno di sfasamenti nell'ordine delle centinaia di 
 nanosecondi); si ferma l'impulso e si trasmettono i dati al computer; se la 
-tensione al punto \verb+OUT2+ ha raggiunto valori maggiori di 3.3V l'acquisizione si ferma
+tensione al punto \verb+OUT2+ ha raggiunto valori maggiori di 3.3V 
+l'acquisizione si ferma
 per non danneggiare \verb+Teensy+, altrimenti si ricomincia caricando il
 condensatore ad una tensione più alta.
 
@@ -253,12 +305,33 @@ condensatore ad una tensione più alta.
 %                   Analisi dati e Risultati
 %================================================================
 \section{Analisi dati e Risultati}
-L’intento della presente analisi è quello di verificare che i dati raccolti siano in accordo con la legge \eqref{eq: model}. A tale riguardo, come operazione preliminare è stato necessario convertire le letture analogiche nelle opportune coppie corrente-tensione relative al diodo. Dunque i dati sono stati convertiti in tensione secondo le calibrazioni dei relativi canali (ADC0 e ADC1). Tale operazione è stata effettuata considerando opportunamente gli errori come descritto nel paragrafo Calibrazione. Successivamente, le tensioni relative ai capi della resistenza $R$ hanno permesso di stimare la rispettiva corrente di lavoro attraverso la legge di Ohm. 
-Si è quindi effettuato un filtraggio volto all'eliminazione degli outliers e dei punti meno significativi, assumendoli quali variabili indipendenti e di natura gaussiana. Per una discussione dettagliata si rimanda all' \nameref{app: A}. E’ necessario sottolineare che, all’interno della stessa appendice, $\sigma_x$ rappresenta la varianza delle letture e non gli errori associati ad esse.
-Successivamente, è stato effettuato un fit ai minimi degli scarti quadratici. Dunque avremo potuto pensare di adottare la legge \eqref{eq: model} direttamente. Tuttavia ciò comporterebbe il fallimento del fit a causa dei valori negativi o nulli che si riscontrerebbero nell’argomento del logaritmo. \`E stata quindi utilizzata la funzione inversa come modello di fit, la quale è stata ricavata numericamente secondo il metodo delle tangenti (o di Newton). Per una trattazione approfondita, si rimanda all' \nameref{app: B}.
+L’intento della presente analisi è quello di verificare che i dati raccolti 
+siano in accordo con la legge \eqref{eq: model}. A tale riguardo, come 
+operazione preliminare è stato necessario convertire le letture analogiche 
+nelle opportune coppie corrente-tensione relative al diodo. Dunque i dati sono 
+stati convertiti in tensione secondo le calibrazioni dei relativi canali (
+\verb+ADC0+ e \verb+ADC1+). Tale operazione è stata effettuata considerando
+opportunamente gli errori come descritto nel paragrafo \ref{sec: cal}.
+Successivamente, le tensioni 
+relative ai capi della resistenza $R$ hanno permesso di stimare la rispettiva 
+corrente di lavoro attraverso la legge di Ohm. 
+Si è quindi effettuato un filtraggio volto all'eliminazione degli outliers e 
+dei punti meno significativi, assumendoli quali variabili indipendenti e di 
+natura gaussiana. Per una discussione dettagliata si rimanda all' \nameref{app: 
+A}. E’ necessario sottolineare che, all’interno della stessa appendice, 
+$\sigma_x$ rappresenta la varianza delle letture e non gli errori associati ad 
+esse.
+Successivamente, è stato effettuato un fit ai minimi degli scarti quadratici. 
+Dunque avremo potuto pensare di adottare la legge \eqref{eq: model} 
+direttamente. Tuttavia ciò comporterebbe il fallimento del fit a causa dei 
+valori negativi o nulli che si riscontrerebbero nell’argomento del logaritmo. 
+\`E stata quindi utilizzata la funzione inversa come modello di fit, la quale 
+è stata ricavata numericamente secondo il metodo delle tangenti (o di Newton). 
+Per una trattazione approfondita, si rimanda all' \nameref{app: B}.
 
 
-I dati raccolti con sovrapposta la funzione di fit sono stati posti all'interno del grafico \ref{fig: sck_lin}.
+I dati raccolti con sovrapposta la funzione di fit sono stati posti all'interno 
+del grafico \ref{fig: sck_lin}.
 I parametri stimati dal fit risultano essere:
 \begin{align*}
 	R_{diodo} &= 47.549 \pm 0.018 \; \rm m\Omega \\
@@ -272,17 +345,23 @@ I parametri stimati dal fit risultano essere:
 \begin{figure}[H]
 	\centering 
  		\includegraphics[scale=0.5]{./Figure_4_1_Nskip_100.png}
-	\caption{Dati acquisiti e funzione di best fit \eqref{eq: model}. E' stato rappresentato un punto ogni 100 per comodità di visualizzazione.}
+	\caption{Dati acquisiti e funzione di best fit \eqref{eq: model}. E' 
+stato rappresentato un punto ogni 100 per comodità di visualizzazione.}
 \end{figure}
 
 
 \begin{figure}[H]
 	\centering 
  		\includegraphics[scale=0.6]{./Figure_3_1_Nskip_10.png}
-	\caption{Dati acquisiti e funzione di best fit \eqref{eq: model} in scala semilogaritmica. E' stato rappresentato un punto ogni 10 per comodità di visualizzazione.}
+	\caption{Dati acquisiti e funzione di best fit \eqref{eq: model} in 
+scala semilogaritmica. E' stato rappresentato un punto ogni 10 per comodità di 
+visualizzazione.}
 \end{figure}
 
-Per gli script si rimanda alla \href{https://github.com/LucaCiucci/relaz_seme/tree/master/Cartella_fit}{cartella}, dove \verb+run.py+ esegue la corretta sequenza e \verb+config.py+ definisce i parametri fondamentali.
+Per gli script si rimanda alla 
+\href{https://github.com/LucaCiucci/relaz_seme/tree/master/Cartella_fit}{cartell
+a}, dove \verb+run.py+ esegue la corretta sequenza e \verb+config.py+ definisce 
+i parametri fondamentali.
 
 %================================================================
 %                          Conclusioni
@@ -290,16 +369,21 @@ Per gli script si rimanda alla \href{https://github.com/LucaCiucci/relaz_seme/tr
 \section{Conclusioni}
 L'andamento dei dati sperimentali non risulta essere ben descritto dalla legge
 \eqref{eq: model}. Ciò può essere spiegato sulla base della non linearità dei
-convertitori analogici digitali all'interno di \verb+Teensy 3.2+. Tale condizione ha omportato
+convertitori analogici digitali all'interno di \verb+Teensy 3.2+. Tale 
+condizione ha omportato
 degli errori difficilmente stimabili e presumibilmente correlati. Tuttavia si
 riscontrano delle analogie tra la funzione di fit ed i dati ottenuti. In
 particolare, dal grafico in scala lineare, si osserva che a correnti alte
 l'andamento risulta essere pressoch\`e lineare, in accordo con l'ipotesi sulla
-componente resistiva interna. Dal grafico in scala semilogaritmica, inoltre, osserviamo
+componente resistiva interna. Dal grafico in scala semilogaritmica, inoltre, 
+osserviamo
 che i dati risultano possedere un andamento simile a quello caratteristico 
-della curva di Shockley, ovvero approssimativamente rettilineo, per poi appiattirsi come un logaritmo al crescere
+della curva di Shockley, ovvero approssimativamente rettilineo, per poi 
+appiattirsi come un logaritmo al crescere
 della tensione.
-Pertanto potremo aspettarci che i parametri stimati dal fit siano significativi e che la modellizzazione proposta sia una buona approssimazione del diodo reale nelle condizioni di lavoro considerate.
+Pertanto potremo aspettarci che i parametri stimati dal fit siano significativi 
+e che la modellizzazione proposta sia una buona approssimazione del diodo reale 
+nelle condizioni di lavoro considerate.
 
 %================================================================
 %                        Appendice A
@@ -493,14 +577,17 @@ ci stanno dando meno informazioni rispetto a quelli di $B$. A questo punto
 è sufficiente controllare tutti i punti scorrendo su tutte le combinazioni
 di set per eliminare i dati non significativi, che rendono meno
 immediata l'interpretazione il grafico. Questo è ben visibile in scala
-logaritmica sulle y dove i punti con grandi incertezze o varianze tendono
+logaritmica sulle $y$ dove i punti con grandi incertezze o varianze tendono
 a disperdersi rapidamente.
 L’algoritmo è computazionalmente intensivo e richiede una corretta gestione
 della memoria per evitare bolle di allocazione, dunque è stato implementato
-in C++ per praticità e richiamato all’interno degli script, per dettagli si rimanda ai \href{https://github.com/LucaCiucci/relaz_seme/tree/master/Cartella_fit/filter_src}{sorgenti}.
+in C++ per praticità e richiamato all’interno degli script, per dettagli si 
+rimanda ai 
+\href{https://github.com/LucaCiucci/relaz_seme/tree/master/Cartella_fit/filter_s
+rc}{sorgenti}.
 Nelle figure di esempio sono mostrati i dati selezionati dall’algoritmo
 (in nero) ed i dati scartati (in rosso). 
-E’ infine mostrato il confronto dei grafici delle $\var(\mu_y)$
+E’ infine mostrato il confronto dei grafici delle $\var{\mu_y}$
 tra due set successivi.
 
 \begin{figure}[H]
@@ -518,7 +605,9 @@ tra due set successivi.
 % 	\caption{Grafico in scala semilogaritmica dopo il filtraggio dati.}
 	\label{fig: filtered}
 \end{subfigure}
-	\caption{Grafici in scala semilogaritmica dei prima (sinistra) e dopo (destra) del filtraggio dati. I dati scartati sono stati evidenziati in rosso. Per praticità è stato rappresentato un centesiomo dei dati raccolti}
+	\caption{Grafici in scala semilogaritmica dei prima (sinistra) e dopo 
+(destra) del filtraggio dati. I dati scartati sono stati evidenziati in rosso. 
+Per praticità è stato rappresentato un centesiomo dei dati raccolti}
 \end{figure}
 \begin{figure}[H]
 	\centering 
@@ -531,22 +620,39 @@ tra due set successivi.
 %                        Appendice B
 %================================================================
 \section{Appendice B: Metodo di fit}\label{app: B}
-La differenza di potenziale $\Delta$V in funzione della corrente I che scorre all’interno del diodo può essere espressa attraverso la legge 2. Potremo, dunque, essere tentati ad adottare tale formula ai fini di un fit numerico. Tuttavia tale operazione provocherebbe il fallimento del fit a causa dei valori negativi o nulli che debitamente si riscontreranno all’interno del logaritmo. E’ stato dunque necessario adottare un algoritmo alternativo, basato sul metodo di Newton\cite{tesi}. Esso ci consentirà di ricostruire numericamente la funzione inversa della legge 2.
-Illustriamo in breve il metodo di Newton. Sia data una funzione f(x) continua e derivabile entro un intervallo di definizione connesso (con f’(x) limitata e diversa da 0 per ciascuna x appartenente al dominio) ed una v tale che f(v) = 0. Sviluppando al prim’ordine f in un intorno di v, otterremo:
+La differenza di potenziale $\Delta$V in funzione della corrente I che scorre 
+all’interno del diodo può essere espressa attraverso la legge 2. Potremo, 
+dunque, essere tentati ad adottare tale formula ai fini di un fit numerico. 
+Tuttavia tale operazione provocherebbe il fallimento del fit a causa dei valori 
+negativi o nulli che debitamente si riscontreranno all’interno del logaritmo. 
+E’ stato dunque necessario adottare un algoritmo alternativo, basato sul 
+metodo di Newton\cite{tesi}. Esso ci consentirà di ricostruire numericamente 
+la funzione inversa della legge 2.
+Illustriamo in breve il metodo di Newton. Sia data una funzione f(x) continua e 
+derivabile entro un intervallo di definizione connesso (con f’(x) limitata e 
+diversa da 0 per ciascuna x appartenente al dominio) ed una v tale che f(v) = 
+0. Sviluppando al prim’ordine f in un intorno di v, otterremo:
 \begin{equation}
 f(x) = f(v) + f{'}(v) + {\frac{1}{2}} {f{''}(X)} \cdot  {( x - v)^2} = 0
 \end{equation}
-ove X è un numero reale compreso fra v ed x. Nel caso in cui il $(x-v)^2 $risultasse prossimo a zero:
+ove X è un numero reale compreso fra v ed x. Nel caso in cui il $(x-v)^2 
+$risultasse prossimo a zero:
 \begin{equation}
 x \simeq v   -  {\frac {f(v)}{f’(v)}}
 \end{equation}
-L’unica limitazione nell’adottare tale scrittura è che necessitiamo di v molto vicino a x incognito. Tuttavia, nel caso in cui la funzione f risultasse sufficientemente maneggevole, potremo partire da un valore generico del dominio e riscontrare con buona approssimazione la radice in un tempo finito relativamente breve. Per effettuare ciò, è necessaria la serie ricorsiva:
+L’unica limitazione nell’adottare tale scrittura è che necessitiamo di v 
+molto vicino a x incognito. Tuttavia, nel caso in cui la funzione f risultasse 
+sufficientemente maneggevole, potremo partire da un valore generico del dominio 
+e riscontrare con buona approssimazione la radice in un tempo finito 
+relativamente breve. Per effettuare ciò, è necessaria la serie ricorsiva:
 \begin{equation}
 \begin{cases}
 x[0] = a \\ x[N+1] = x[N] - \frac {f(x[N])} {f’(x[N])}
 \end{cases}
 \end{equation}
-ove a è un generico valore appartenente al dominio di definizione. In pratica, per ogni iterazione tale serie valuta f(x[i]) e cerca la retta tangente in tale punto alla funzione:
+ove a è un generico valore appartenente al dominio di definizione. In pratica, 
+per ogni iterazione tale serie valuta f(x[i]) e cerca la retta tangente in tale 
+punto alla funzione:
 \begin{equation}
 y = f(x[i]) + f’(x[i]) \cdot (x-x[i])
 \end{equation}
@@ -554,36 +660,61 @@ y = f(x[i]) + f’(x[i]) \cdot (x-x[i])
 \begin{equation}
 x = x[i+1] = x[i] - \frac{f(x[i])}{f’([i])}
 \end{equation}
-E viene conseguentemente valutato il valore f(x[i+1]) ed il procedimento viene ripetuto per un dato numero di iterazioni. 
+E viene conseguentemente valutato il valore f(x[i+1]) ed il procedimento viene 
+ripetuto per un dato numero di iterazioni. 
 \begin{figure}[H]
 	\centering 
  		\includegraphics[scale=0.75]{./Figura1_appendiceB.png}
-	\caption{Visualizzazione grafica di cosa implica un’iterazione della serie ricorsiva (f(x) = $x^3$ in questo esempio)}
+	\caption{Visualizzazione grafica di cosa implica un’iterazione della 
+serie ricorsiva (f(x) = $x^3$ in questo esempio)}
 \end{figure}
-Se la funzione è monotona e la serie converge ad un valore, tale sarà v, essendo l’unico punto fisso della serie:
+Se la funzione è monotona e la serie converge ad un valore, tale sarà v, 
+essendo l’unico punto fisso della serie:
 \begin{equation}
  {a = a -  {\frac{f(a)}{f{’}(a)}}}\to{{f(a) = 0}\land{v = a}}
 \end{equation}
 essendo v l’unico punto in cui si annulla la funzione per definizione.
-Ritornando al diodo, esso può essere interpretato quale un diodo ideale ed una resistenza in serie, collegati ad un generatore di differenza di potenziale. Quindi, per la legge delle maglie:
+Ritornando al diodo, esso può essere interpretato quale un diodo ideale ed una 
+resistenza in serie, collegati ad un generatore di differenza di potenziale. 
+Quindi, per la legge delle maglie:
 \begin{equation}
-\Delta V_{\text{ingresso}} = \Delta V_{\text{diodo}} + \Delta V_{\text{resistenza}} = \Delta V_{\text{diodo}} + R \cdot I
+\Delta V_{\text{ingresso}} = \Delta V_{\text{diodo}} + \Delta 
+V_{\text{resistenza}} = \Delta V_{\text{diodo}} + R \cdot I
 \end{equation}
-ove I è la corrente che scorre all’interno del diodo in quel determinato istante. Notoriamente, tale scrittura si può porre nella seguente forma ai fini di definire la retta di carico del diodo:
+ove I è la corrente che scorre all’interno del diodo in quel determinato 
+istante. Notoriamente, tale scrittura si può porre nella seguente forma ai 
+fini di definire la retta di carico del diodo:
 \begin{equation}
 \Delta V_{\text{diodo}} = \Delta V_{\text{ingresso}} - R \cdot I
 \end{equation}
-Il punto di intersezione di tale retta con l’equazione di Shockley per il diodo rappresenta il punto di lavoro (v, i) del diodo:
+Il punto di intersezione di tale retta con l’equazione di Shockley per il 
+diodo rappresenta il punto di lavoro (v, i) del diodo:
 \begin{equation}
-i = I_0 \cdot ( e^{\frac {\Delta V_{\text{ingresso}} - R \cdot i}{\eta V_T} } - 1) = I_0 \cdot (e^{\frac{v} {\eta V_T}} -1) =  \frac{\Delta V_{\text{ingresso}} - v}{R}
+i = I_0 \cdot ( e^{\frac {\Delta V_{\text{ingresso}} - R \cdot i}{\eta V_T} } - 
+1) = I_0 \cdot (e^{\frac{v} {\eta V_T}} -1) =  \frac{\Delta V_{\text{ingresso}} 
+- v}{R}
 \end{equation}
-Tale i dovrà necessariamente corrispondere alla corrente di lavoro in virtù dell’equazione di Shockley. Dunque definendo la funzione g(x) come segue:
+Tale i dovrà necessariamente corrispondere alla corrente di lavoro in virtù 
+dell’equazione di Shockley. Dunque definendo la funzione g(x) come segue:
 \begin{equation}\label{eq: invsck}
-g(x) = I_0 \cdot ( e^{\frac{x}{\eta V_T}} - 1)  - \frac {\Delta V_{\text{ingresso}} - x}{R}
+g(x) = I_0 \cdot ( e^{\frac{x}{\eta V_T}} - 1)  - \frac {\Delta 
+V_{\text{ingresso}} - x}{R}
 \end{equation}
-è possibile adottare il metodo di Newton al fine di riscontrare la radice v ed individuare così la corrente di lavoro. 
-Dunque s potrà effettuare un fit della corrente in funzione della tensione ai capi del diodo reale attraverso una legge che per un determinato valore della tensione ($\Delta V_{\text{ingresso}}$) ed un dato numero di iterazioni (ne sono sufficienti poche nel nostro caso ai fini di ottenere un’approssimazione adeguata), riesce ad individuare la radice v  nelle modalità previamente descritte. Attraverso la stessa, sarà quindi possibile individuare la corrente di lavoro del diodo per la suddetta $\Delta V_{\text{ingresso}}$. 
-E’ immediato comprendere che fare un fit con questa legge risulta essere equivalente a fare un fit con la legge 2, con minori complicazioni computazionali. Verifichiamo graficamente che per dei generici valori della corrente  i due metodi danno risultati sostanzialmente equivalenti (adottiamo i parametri stimati dal fit). I grafici relativi alla convergenza di v e di I anche a seguito di sole 20 iterazioni:
+è possibile adottare il metodo di Newton al fine di riscontrare la radice v ed 
+individuare così la corrente di lavoro. 
+Dunque s potrà effettuare un fit della corrente in funzione della tensione ai 
+capi del diodo reale attraverso una legge che per un determinato valore della 
+tensione ($\Delta V_{\text{ingresso}}$) ed un dato numero di iterazioni (ne 
+sono sufficienti poche nel nostro caso ai fini di ottenere un’approssimazione 
+adeguata), riesce ad individuare la radice v  nelle modalità previamente 
+descritte. Attraverso la stessa, sarà quindi possibile individuare la corrente 
+di lavoro del diodo per la suddetta $\Delta V_{\text{ingresso}}$. 
+E’ immediato comprendere che fare un fit con questa legge risulta essere 
+equivalente a fare un fit con la legge 2, con minori complicazioni 
+computazionali. Verifichiamo graficamente che per dei generici valori della 
+corrente  i due metodi danno risultati sostanzialmente equivalenti (adottiamo i 
+parametri stimati dal fit). I grafici relativi alla convergenza di v e di I 
+anche a seguito di sole 20 iterazioni:
 \begin{figure}[H]
 	\centering 
  		\includegraphics[scale=0.75]{./Figura2_appendiceB.png}
@@ -593,8 +724,13 @@ E’ immediato comprendere che fare un fit con questa legge risulta essere equiv
  		\includegraphics[scale=0.75]{./Figura3_appendiceB.png}
 \end{figure}
 
-Tali grafici evidenziano che, come era da aspettarsi, la legge adottata per il fit risulta essere l’inversa numerica della legge 2. La serie, inoltre, risulta convergere molto rapidamente ai valori attesi e quindi sono effettivamente sufficienti solo 20 iterazioni per una buona precisione.
-All’interno della funzione di fit, è stato infine introdotto un offset quale parametro libero per ovviare errori di zero dovuti agli assorbimenti di ADC in Teensy 3.2.
+Tali grafici evidenziano che, come era da aspettarsi, la legge adottata per il 
+fit risulta essere l’inversa numerica della legge 2. La serie, inoltre, 
+risulta convergere molto rapidamente ai valori attesi e quindi sono 
+effettivamente sufficienti solo 20 iterazioni per una buona precisione.
+All’interno della funzione di fit, è stato infine introdotto un offset quale 
+parametro libero per ovviare errori di zero dovuti agli assorbimenti di ADC in 
+Teensy 3.2.
 
 %================================================================
 %                            END
