errore_battitura_corretto

--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -233,7 +233,7 @@ lineare attraverso la legge:
 y(x, m, q)  = m \cdot x + q
 \end{equation}
 
-ove a e b sono i parametri liberi. Come errori associati alle letture digitali 
+ove m e q sono i parametri liberi. Come errori associati alle letture digitali 
 sono state utilizzate le deviazioni standard dalla media. I fit relativi ad 
 \verb+ADC0+ ed \verb+ADC1+ hanno conseguito i seguenti risultati:
 \begin{align*}
