piccoli_errori_battitura

--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -66,7 +66,7 @@ B.~Tomelleri(\protect\footnotemark[1] )}
 %misuriamo l'entità, al fine di arrivare ad un modello teorico in grado
 %giustificare eventuali deviazioni dal modello di Shockley, verso una risposta
 %-ohmica- dovuta alla resistenza della giunzione PN al passaggio di 
-correnti.\\\\
+%correnti.\\\\
 %PACS 01.40.-d – Education.\\
 %PACS 01.50.Pa – Laboratory experiments and apparatus.
 %\end{mdframed}
@@ -359,8 +359,8 @@ visualizzazione.}
 \end{figure}
 
 Per gli script si rimanda alla 
-\href{https://github.com/LucaCiucci/relaz_seme/tree/master/Cartella_fit}{cartell
-a}, dove \verb+run.py+ esegue la corretta sequenza e \verb+config.py+ definisce 
+\href{https://github.com/LucaCiucci/relaz_seme/tree/master/Cartella_fit}{cartella}
+, dove \verb+run.py+ esegue la corretta sequenza e \verb+config.py+ definisce 
 i parametri fondamentali.
 
 %================================================================
