--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -371,7 +371,7 @@ pressoch\`e linearmente, in accordo con l'ipotesi sulla componente resistiva int
 semilogaritmica, inoltre, i dati risultano possedere un andamento simile a quello caratteristico della
 curva di Shockley, ovvero approssimativamente rettilineo per poi appiattirsi come un logaritmo al
 crescere della tensione. Dunque, possiamo asserire che l'andamento dei
-dati sperimentali risulta essere ben descritto dalla legge \eqref{eq: model}.
+dati sperimentali risulta essere in buon accordo con la legge \eqref{eq: model}.
 Pertanto potremo aspettarci che i parametri stimati dal fit siano significativi 
 e che la modellizzazione proposta sia una buona approssimazione del diodo reale 
 nelle condizioni di lavoro considerate.
