--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -179,7 +179,7 @@ entrambi con una risoluzione reale di 12 bit. La lettura differenziale è
 fondamentale per acquisire coppie di dati per le tensioni ai capi del diodo
 e della resistenza.
 
-\begin{figure}[H]% so che è brutto che lascia un po' di spazio bianco ma altrimenti lo metterebbe dentro acquisizione dati
+\begin{figure}[H]% so che è brutto che lascia un po' di spazio bianco ma altrimenti lo metterebbe dentro calibrazione
 	\centering 
  		\includegraphics[scale=0.5]{./gestione.png}
  	\caption{Circuito globale per la gestione del diodo \label{sch:gest}}
