--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -119,7 +119,7 @@ legge \eqref{eq: model} (in viola)}
 Il circuito sotto studio lavora con correnti relativamente alte. Onde evitare 
 sostanziali aumenti di temperatura nei componenti ed eventuali danni agli 
 stessi si imprimono correnti impulsate.
-La durata degli impulsi è di circa 150 $\mu$s, che 
+La durata degli impulsi è inferiore ai 200 $\mu$s, che 
 corrisponde ad un'energia impressa inferiore a 1 mJ (dunque ad un aumento della 
 temperatura del semiconduttore inferiore a 0.5 K).
 %Dovendo lavorare con correnti relativamente alte per il circuito sotto studio,
@@ -328,7 +328,7 @@ I parametri stimati dal fit risultano essere:
 	R_{\text{diodo}} &= 46.1118 \pm 0.0072 \; \rm m\Omega \\
 	\eta V_T &= 47.5786 \pm 0.0033 \; \rm mV \\
 	I_0 &= 4.5180 \pm 0.0043 \; \rm nA \\
-	\text{offset} &=\; - 2.2043\pm 0.0073\rm \mu A\\
+	\text{offset} &=\; - 2.2043\pm 0.0073 \;  \mu A\\
 	\chi^2/\text{ndof} &= 72207/251066 \\
 	\text{abs\_sigma} &= \rm False
 \end{align*}
@@ -719,11 +719,11 @@ computazionali. Verifichiamo graficamente che per dei generici valori della
 corrente  i due metodi danno risultati sostanzialmente equivalenti (adottiamo i 
 parametri stimati dal fit). I grafici relativi alla convergenza di $v$ e di $I$ 
 anche a seguito di sole 20 iterazioni:
-\begin{figure}[!htbp]% questi vanno sistemati meglio perchè occupano una pagina da soli!!!
+\begin{figure}[H]% questi vanno sistemati meglio perchè occupano una pagina da soli!!!
 	\centering 
  		\includegraphics[scale=0.75]{./Figura2_appendiceB.png}
 \end{figure}
-\begin{figure}[!htbp]
+\begin{figure}[H]
 	\centering 
  		\includegraphics[scale=0.75]{./Figura3_appendiceB.png}
 \end{figure}
