--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -580,7 +580,7 @@ $q = 3$), questo indica che i dati di $A$
 ci stanno dando "poca" informazione rispetto a quelli di $B$. A questo punto
 è sufficiente controllare tutti i punti scorrendo su tutte le combinazioni
 di set per eliminare i dati non significativi, che rendono meno
-immediata l'interpretazione il grafico. Questo è ben visibile in scala
+immediata l'interpretazione del grafico. Questo è ben visibile in scala
 logaritmica sulle $y$ dove i punti con grandi incertezze o varianze tendono
 a disperdersi rapidamente.
 L’algoritmo è computazionalmente intensivo e richiede una corretta gestione
